--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "homepage": "https://github.com/gerald-tetteh/awms#readme",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "mongodb": "^4.5.0"
   }
 }
